# quickindex

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  publish.sh  pyproject.toml  tox.ini
.github/workflows/: .pre-commit-and-test.yml.swp  flake8-and-test.yml  pre-commit-and-test.yml  python-package.yml
scripts/style/: autopep8.sh  flake8.sh
scripts/tests/: parse_pyproject.py  test_published_pkg.sh
src/quickindex/: __init__.py  quickindex.py
tests/: test.py
