[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickindex"
version = "1.1.0"
authors = [
  { name="David Bernadett", email="djbernadett@gmail.com" },
]
description = "An easy way to index lists in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dbernadett/quickindex"
"Bug Tracker" = "https://github.com/dbernadett/quickindex/issues"
